fix display form question on small size screen

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -68,3 +68,27 @@
     display: none;
   }
 }
+
+label {
+  font-weight: bold;
+}
+label:after {
+  content: ':';
+}
+
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 0.5em;
+  display: inline-block;
+    margin-bottom: 10px;
+
+  border: none;
+  background: #f1f1f1;
+  font-size: 16px;
+}
+
+input[type=text]:focus, input[type=password]:focus, input[type=color]:focus {
+  background-color: #ddd;
+  outline: none;
+}
